# xmppdbg

./: com.github.jubalh.xmppdbg.json  meson.build
data/: com.github.jubalh.xmppdbg.appdata.xml.in  com.github.jubalh.xmppdbg.desktop.in  com.github.jubalh.xmppdbg.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  xmppdbg-application.c  xmppdbg-application.h  xmppdbg-window.c  xmppdbg-window.h  xmppdbg-window.ui  xmppdbg.gresource.xml
